feat(功能用例): 新增用例创建评论功能